# llm-racing

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_experiment.sh
llm_racing/: __main__.py  local_deepspeed.py  openai.py  plotting.py  racer.py
