[project]
name = "llm-racing"
description = "Testing the speed of llm models at inference"
requires-python = ">=3.8"
dependencies = [
    "torch==2.0.0",
    "transformers[deepspeed]",
    "ipykernel",
    "openai",
    "huggingface_hub",
    "python-dotenv",
    "seaborn",
    "statsmodels",
    "pandas",
]
version="0.0.1"

[tool.setuptools.packages.find]
namespaces = false